[gd_scene load_steps=24 format=3 uid="uid://dpaoi6vab80x8"]

[ext_resource type="Script" path="res://world/backyard_level_controller.gd" id="1_6flcs"]
[ext_resource type="PackedScene" uid="uid://cjodr1wix6a21" path="res://ui/fading_ui_layer.tscn" id="1_vu14g"]
[ext_resource type="PackedScene" uid="uid://cdv3a87i76ngd" path="res://world/game_level.tscn" id="2_d2nvc"]
[ext_resource type="PackedScene" uid="uid://cn0s5p2j4l8yb" path="res://entity/girl/girl_npc.tscn" id="2_sxime"]
[ext_resource type="PackedScene" uid="uid://dynqohq7nxad2" path="res://entity/boy/boy_npc.tscn" id="3_j7rks"]
[ext_resource type="Texture2D" uid="uid://qkjpywuxwmvf" path="res://assets/art/player.png" id="4_xkwkv"]
[ext_resource type="Texture2D" uid="uid://dunonclpu0vee" path="res://assets/art/shadow.png" id="5_j8mg1"]
[ext_resource type="PackedScene" uid="uid://bvvc58htxgchg" path="res://entity/dog/dog.tscn" id="8_sipr5"]
[ext_resource type="Texture2D" uid="uid://6j23b5ajdagq" path="res://assets/art/map/patio.png" id="9_jh18d"]
[ext_resource type="Texture2D" uid="uid://du015ety30iyh" path="res://assets/art/map/house.png" id="10_glysb"]
[ext_resource type="PackedScene" uid="uid://dta35qrdcifww" path="res://world/map/carrots.tscn" id="11_7dsmo"]
[ext_resource type="PackedScene" uid="uid://ba6d6ardcmabv" path="res://world/map/bush.tscn" id="12_loc7l"]
[ext_resource type="PackedScene" uid="uid://bdl7jak15b1nx" path="res://world/map/robot.tscn" id="13_8oehu"]
[ext_resource type="PackedScene" uid="uid://clhocpfnbfvc4" path="res://world/map/rock.tscn" id="14_hmdvw"]
[ext_resource type="PackedScene" uid="uid://qmqg5xcn6d0o" path="res://world/map/turtle.tscn" id="15_pffvs"]
[ext_resource type="PackedScene" uid="uid://dc5k88laoni21" path="res://world/map/fountain.tscn" id="16_ns7uo"]
[ext_resource type="PackedScene" uid="uid://cjb64ltxfwafh" path="res://world/map/shaking_bush.tscn" id="17_anq4l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4vca"]
size = Vector2(320, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ynbl"]
atlas = ExtResource("4_xkwkv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw2ty"]
atlas = ExtResource("4_xkwkv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3gvf"]
atlas = ExtResource("4_xkwkv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ao0k"]
atlas = ExtResource("4_xkwkv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5oggj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ynbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw2ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3gvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ao0k")
}],
"loop": true,
"name": &"default",
"speed": 2.5
}]

[node name="backyard_level" type="Node2D"]
script = ExtResource("1_6flcs")
game_level = ExtResource("2_d2nvc")

[node name="FadingUILayer" parent="." instance=ExtResource("1_vu14g")]

[node name="BackgroundYard" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackgroundYard"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.780392, 0.301961, 1)

[node name="BackyardSprite" type="Sprite2D" parent="."]

[node name="MapBackground" type="Node2D" parent="."]
z_index = -100

[node name="Sprite2D2" type="Sprite2D" parent="MapBackground"]
position = Vector2(99, 39)
texture = ExtResource("9_jh18d")
offset = Vector2(-0.5, 0.74)

[node name="Sprite2D" type="Sprite2D" parent="MapBackground"]
texture = ExtResource("10_glysb")
centered = false
region_enabled = true
region_rect = Rect2(0, 24.3015, 320, 39.6985)

[node name="Carrots" parent="MapBackground" instance=ExtResource("11_7dsmo")]
position = Vector2(21, 131)

[node name="StaticBody2D" type="StaticBody2D" parent="MapBackground"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBackground/StaticBody2D"]
position = Vector2(160, 19.5)
shape = SubResource("RectangleShape2D_a4vca")

[node name="Bush" parent="MapBackground" instance=ExtResource("12_loc7l")]
position = Vector2(7.5, 56)

[node name="MapObjects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Robot" parent="MapObjects" instance=ExtResource("13_8oehu")]
position = Vector2(194, 118)

[node name="Rock" parent="MapObjects" instance=ExtResource("14_hmdvw")]
position = Vector2(256, 44)

[node name="Rock2" parent="MapObjects" instance=ExtResource("14_hmdvw")]
position = Vector2(303, 143)
frame = 2

[node name="Shadow" parent="MapObjects/Rock2" index="0"]
scale = Vector2(1.2, 1)

[node name="Rock3" parent="MapObjects" instance=ExtResource("14_hmdvw")]
position = Vector2(303, 96)
frame = 1

[node name="Shadow" parent="MapObjects/Rock3" index="0"]
scale = Vector2(0.8, 0.8)

[node name="Rock5" parent="MapObjects" instance=ExtResource("14_hmdvw")]
position = Vector2(211, 42)
scale = Vector2(-1, 1)
frame = 1

[node name="Shadow" parent="MapObjects/Rock5" index="0"]
scale = Vector2(0.8, 0.8)

[node name="Rock4" parent="MapObjects" instance=ExtResource("14_hmdvw")]
position = Vector2(170, 44)
flip_h = true

[node name="Turtle" parent="MapObjects" instance=ExtResource("15_pffvs")]
position = Vector2(306, 139)
frame_progress = 0.0664512
flip_h = true

[node name="Fountain" parent="MapObjects" instance=ExtResource("16_ns7uo")]
position = Vector2(157, 148)

[node name="ShakingBush" parent="MapObjects" instance=ExtResource("17_anq4l")]
position = Vector2(28, 61)

[node name="GirlNPC" parent="MapObjects" instance=ExtResource("2_sxime")]
position = Vector2(214, 72)

[node name="BoyNPC" parent="MapObjects" instance=ExtResource("3_j7rks")]
position = Vector2(189, 72)

[node name="DadSprite" type="AnimatedSprite2D" parent="MapObjects"]
position = Vector2(137, 72)
sprite_frames = SubResource("SpriteFrames_5oggj")
autoplay = "default"
offset = Vector2(0, -16)

[node name="Shadow" type="Sprite2D" parent="MapObjects/DadSprite"]
modulate = Color(1, 1, 1, 0.392157)
show_behind_parent = true
position = Vector2(-0.5, -1)
texture = ExtResource("5_j8mg1")

[node name="Dog" parent="MapObjects" instance=ExtResource("8_sipr5")]
position = Vector2(123, 72)
scale = Vector2(0.5, 0.5)
is_intro_scenes = true

[editable path="MapObjects/Rock2"]
[editable path="MapObjects/Rock3"]
[editable path="MapObjects/Rock5"]
